--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   cupertino_icons: ^1.0.2
-
+  flutter_riverpod: ^2.4.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
