--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive_flutter: ^1.1.0
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.5
+  get_it: ^7.6.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
